--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  background-color:#FAF7F0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  background-color:#D1B8A3;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+nav{
+  display: flex;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+.menu{
+  margin-left:60px;
+  text-transform: uppercase;
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+   font-style: normal;
+   text-decoration: none;
+   color: black;
+   font-size: 18px;
+}
+.menu:hover{
+  color:#D12E77;
+  font-weight: bold;
+  font-size: 20px;
+}
+.logo{
+  margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media all and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  nav {
+    flex-direction: column;
+    margin-right: 0;
+    margin-top: 10px;
+  }
+
+  .menu {
+    margin-left: 0;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  body {
+    font-size: 16px;
   }
 }
