--- a/src/Checkout/Checkout.css
+++ b/src/Checkout/Checkout.css
@@ -116,7 +116,11 @@ strong{
     font-size: 18px;
     font-weight: 500;
 }
-
+.venmo{
+    display: flex;
+   flex-direction: column;
+   margin-top: 30px;
+}
 
   
   
