--- a/src/App.css
+++ b/src/App.css
@@ -43,28 +43,11 @@ nav{
 .logo{
   margin-left: 10px;
 }
+@import './MainHeader.css';
 
 
-@media all and (max-width: 768px) {
-  .header {
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-  }
 
-  nav {
-    flex-direction: column;
-    margin-right: 0;
-    margin-top: 10px;
-  }
 
-  .menu {
-    margin-left: 0;
-    font-size: 14px;
-    text-align: center;
-  }
 
-  body {
-    font-size: 16px;
-  }
-}
+
+
