--- a/src/Header/MainPage/Line/Line.css
+++ b/src/Header/MainPage/Line/Line.css
@@ -15,3 +15,24 @@
  text-align: center;
  font-size: 20px;
 }
+
+@media all and (max-width: 1024px) {
+    .textLine {
+      font-size: 16px;
+    }
+  
+    .line {
+      padding: 7px;
+    }
+  }
+  
+  @media all and (max-width: 768px) {
+    .textLine {
+      font-size: 15px;
+    }
+  
+    .line {
+      padding: 8px;
+    }
+  }
+  
