--- a/src/Header/MainPage/Footer/Footer.css
+++ b/src/Header/MainPage/Footer/Footer.css
@@ -180,7 +180,7 @@ p {
     .footer_container {
         flex-direction: column;
         align-items: center;
-        padding: 30px 20px;
+        padding: 10px;
     }
 
     .contact,
