--- a/src/Header/MainPage/Footer/Footer.css
+++ b/src/Header/MainPage/Footer/Footer.css
@@ -180,7 +180,12 @@ p {
     .footer_container {
         flex-direction: column;
         align-items: center;
-        padding: 20px;
+         margin-top: 30px;
+    }
+    .ord{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .contact,
