--- a/src/Header/Catalog/catalog.css
+++ b/src/Header/Catalog/catalog.css
@@ -60,6 +60,15 @@
 
 
 @media all and (max-width: 768px) {
+
+  .dropButton {
+    font-size: 16px;
+    cursor: pointer;
+    margin-left: 0; 
+    line-height: 1.4;
+    padding: 0;
+  }
+  
   .dropdown {
     left: 50%;
     transform: translateX(-50%);
