--- a/src/Header/MainPage/Footer/Footer.css
+++ b/src/Header/MainPage/Footer/Footer.css
@@ -1,70 +1,4 @@
-/*.footer_container{
-    display: flex;
-    justify-content: space-between;
-    background-color: #D1B8A3 ;
-    padding: 40px;
-}
 
-.contact{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 350px;
-    font-family: "Urbanist", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-     font-style: normal;
-     font-size: 16px;
-     padding: 20px;
-     
-}
-.delivery_container{
-    width: 300px;
-    font-family: "Urbanist", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-     font-style: normal;
-     font-size: 16px;
-     padding: 20px;
-}
-.del_message{
-    text-align: center;
-    margin-bottom: 20px;
-}
-.footer_logo{
-    width:300px;
-} 
-.contact_head{
-    font-size: 15px;
-    font-weight: 450;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 20px;
-}
-.email{
-    color: black;
-    cursor:pointer;
-}
-.email:hover{
-    color:#D12E77;
-}
-.picIcon{
-    margin-left: 18px;
-    cursor: pointer;
-}
-.phone{
-    margin-bottom: 16px;
-}
-
-.hours_del{
-    margin-bottom: 8px;
-}
-p,li{
-    margin-bottom: 8px;
-    
-}
-
-*/
 
 
 
@@ -74,7 +8,7 @@ p,li{
     justify-content: space-between;
     background-color: #D1B8A3;
     padding: 40px;
-    gap: 20px;
+    gap:20;
     box-sizing: border-box;
 }
 
@@ -85,12 +19,13 @@ p,li{
     font-weight: 300;
     font-style: normal;
     font-size: 16px;
-    padding: 20px;
+    /*
+    padding: 20px;*/
     box-sizing: border-box;
 }
 
 .contact {
-    width: 350px;
+    max-width: 350px;
 }
 .delivery_name{
     font-size: 25px;
@@ -100,7 +35,7 @@ p,li{
     margin-bottom: 20px;
 }
 .delivery_container {
-    width: 300px;
+    max-width: 300px;
 }
 
 
