--- a/src/MainHeader.css
+++ b/src/MainHeader.css
@@ -67,18 +67,21 @@
     .nav {
       display: none;
       flex-direction: column;
-      align-items: center;
+      align-items: center; /* ✅ Добавлено */
+      text-align: center;   
       margin-top: 10px;
-      gap: 10px;
+     
     }
-  
+    
     .nav.open {
       display: flex;
     }
   
     .menu {
-      font-size: 15px;
-      margin-left:18px ;
+      font-size: 16px;
+      margin-left: 0; /* было 18px */
+      line-height: 1.4;
+      
     }
   }
   
