--- a/src/Header/MainPage/MainBestsellers/MainBestsellers.css
+++ b/src/Header/MainPage/MainBestsellers/MainBestsellers.css
@@ -142,8 +142,8 @@
     }
   
     .picture .bestImg {
-      height: 300px;
-      width: 200px;
+      max-height: 280px;
+      max-width: 200px;
     }
   
    .picture:hover{
